Way, way, to big commit...

--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
     <title>Oops, page not found!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/main.26d01df5.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.8e9a29d6.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicons/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
           <nav>
             <ul>
               <li><a href="./index.html">Start</a></li>
-              <li><a href="./reanactment.html">Reanactment</a></li>
+              <li><a href="./reenactment.html">Reenactment</a></li>
               <li><a href="./hire-us.html">Hire Us</a></li>
             </ul>
           </nav>
@@ -73,7 +73,7 @@
         </nav>
       </div>
     </footer>
-    <script src="./js/main.8949237a.js"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <script async src="./js/main.7286e866.js"></script>
+    <script async src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
