--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
     <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/main.26d01df5.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.8e9a29d6.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicons/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
           <nav>
             <ul>
               <li><a href="./index.html">Start</a></li>
-              <li><a href="./reanactment.html">Reanactment</a></li>
+              <li><a href="./reenactment.html">Reenactment</a></li>
               <li><a href="./hire-us.html">Hire Us</a></li>
             </ul>
           </nav>
@@ -61,13 +61,8 @@
       <div class="content">
         <h2>Based in Malmö</h2>
         <img src="./img/viking-icon.svg"/>
-        <h3>Organisation</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <h3>Skåne lag</h3>
+        <p>TEXT 9 (not done). Skåne lag is one of the oldest Viking societies in Sweden with a long experience of re-enactment and association work. Everyone is welcome to participate and we have a strict anti-discrimination policy. We are a non-profit organisation aiming to recreate the Viking period in the end of the Scandinavian Iron Age (8th to 12th century). Within the group we highlight the value of teamwork, friendship and an exchange of ideas and thoughts between members and other reenactors. Today the group has around 50 members who in different ways reconstruct the Viking culture. Skåne lag is based in Malmö in the south of Sweden. Here the fighters meet once a week to practice. During the summer, many of our members participate in different markets across the world. Skåne lag as an association is managed by a member-elected board who oversee the group, the economy and the policy.
         </p>
       </div>
     </section>
@@ -76,12 +71,7 @@
       <div class="content">
         <h2>Training</h2>
         <h3>How to get started</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <p>TEXT 10 (not done). One of Skåne lags main focuses is the Viking Age competitive combat, or fighting. This is a full body contact sport with blunted steal weapons. We aim to be as authentic as possible with our choice of weaponry, equipment and fighting styles. Everyone is welcome to join the weekly practice, regardless of prior experiences. As a beginner you train together with an instructor in order to learn the basics before practicing with the whole group. Skåne lag has a useful mentor system where everyone who want can choose a more experienced fighter to get extra help from. Together we aim to have a safe and fun atmosphere in the training hall.
         </p>
       </div>
     </section>
@@ -91,12 +81,8 @@
         <h2>Part of Jomsborg</h2>
         <img src="./img/viking-icon.svg"/>
         <h3>Jomsborg</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <p>TEXT 11 (not done). Skåne lag is part of a worldwide living-history organisation called Jomsborg. The name comes from the Jomsvikings. These historical Viking warriors once made up a brotherhood spanning across the northern part of Europe in the late Iron Age. They had their stronghold on the island of Wolin in today’s Poland and figure in both archaeological and historical sources.
+The modern Jomsborg was founded in 1988 and today it includes over 30 groups, or lags. It is divided within five Storms, where Skåne lag is part of West Storm. The other ones include North Storm, East Storm, South Storm and Utland Storm. In true Viking spirit Jomsborg is lead by an elected Jarl. As with Skåne lag the whole of Jomsborg aims to recreate Viking Age culture in an authentic way where everyone is welcome.
         </p>
         <div class="button-component">
           <a href="http://www.jomsborg.com">To Jomsborg</a>
@@ -109,29 +95,7 @@
         <div class="images">
             <div class="sliding-element active">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/horse.jpg)"></div>
-              <div class="content">
-                  <h3>Vikings</h3>
-                  <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
-              </div>
-            </div>
-            <div class="sliding-element ">
-              <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/profile.jpg)"></div>
-                  <div class="video-component" data-video-id="mFc_05xzftw">
-                    <div class="video-play-icon">
-                      <img src="./img/play.svg">
-                    </div>
-                    <div class="video-overlay">
-                      <div class="close-video"></div>
-                      <div class="video-container">
-                      <div class="videowrapper">
-                        <div class="video-slot"></div>
-                        
-                      </div>
-                      </div>
-                    </div>
-                  </div>
+              <div class="image" style="background-image:url(./img/jomsborg_line.jpg);"></div>
               <div class="content">
                   <h3>Vikings</h3>
                   <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
@@ -153,7 +117,7 @@
           <li>
             <a>
               <div>
-                <div class="icon" style="background-image:url('./img/closeup.jpg')"></div>
+                <div class="icon" style="background-image:url('./img/pernilla.jpg'); background-position: center center;"></div>
               </div>
               <p>Pernilla Svensson</p>
             </a>
@@ -163,7 +127,7 @@
               <div>
                 <div class="icon" style="background-image:url('./img/closeup.jpg')"></div>
               </div>
-              <p>Pernilla 3</p>
+              <p>Someone 1</p>
             </a>
           </li>
           <li>
@@ -171,7 +135,7 @@
               <div>
                 <div class="icon" style="background-image:url('./img/closeup.jpg')"></div>
               </div>
-              <p>Pernilla 3</p>
+              <p>Someone 2</p>
             </a>
           </li>
         </ul>
@@ -226,7 +190,7 @@
         </nav>
       </div>
     </footer>
-    <script src="./js/main.8949237a.js"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <script async src="./js/main.7286e866.js"></script>
+    <script async src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
