--- a/public/hire-us.html
+++ b/public/hire-us.html
@@ -3,7 +3,7 @@
     <title>Hire us</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/main.26d01df5.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.8e9a29d6.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicons/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
           <nav>
             <ul>
               <li><a href="./index.html">Start</a></li>
-              <li><a href="./reanactment.html">Reanactment</a></li>
+              <li><a href="./reenactment.html">Reenactment</a></li>
               <li><a href="./hire-us.html">Hire Us</a></li>
             </ul>
           </nav>
@@ -60,13 +60,14 @@
     <section class="hire-section">
       <div class="content">
         <img src="./img/viking-icon.svg"/>
-        <h3>Hire us</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <h3>Dedicated</h3>
+        <p>We believe history is a living thing that needs to be understod in order to fully grasp our own 
+          modern world, culture and society. Providing a captivating and authentic way of portraying 
+          the Vikings our goal is to make this fascinating time period tangible for the broad public. 
+          Everyone involved is truly dedicated and spend hunders of hours training, studying and crafting 
+          clothes and equipment. We put a lot of prestige and effort in historical authenticity and we travel 
+          the world to showcase our skills and recreate the Viking Age society on a full scale. 
+          Meet us and the faces of our remarkable ancestors.
         </p>
         <div class="button-component">
           <a href="./vikings.html">The Vikings</a>
@@ -79,9 +80,39 @@
         <div class="images">
             <div class="sliding-element active">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/profile.jpg)"></div>
+              <div class="image" style="background-image:url(./img/profile.jpg);"></div>
               <div class="content">
                   <h3>Movies</h3>
+                  <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+              </div>
+            </div>
+            <div class="sliding-element ">
+              <div class="image-overlay"></div>
+              <div class="image" style="background-image:url(./img/music_video.jpg);"></div>
+                  <div class="video-component" data-video-id="mFc_05xzftw">
+                    <div class="video-play-icon">
+                      <img src="./img/play.svg">
+                    </div>
+                    <div class="video-overlay">
+                      <div class="close-video"></div>
+                      <div class="video-container">
+                      <div class="videowrapper">
+                        <div class="video-slot"></div>
+                        
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+              <div class="content">
+                  <h3>Music videos</h3>
+                  <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+              </div>
+            </div>
+            <div class="sliding-element ">
+              <div class="image-overlay"></div>
+              <div class="image" style="background-image:url(./img/filming.jpg);"></div>
+              <div class="content">
+                  <h3>Shows</h3>
                   <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
               </div>
             </div>
@@ -96,13 +127,14 @@
     <section class="hire-section">
       <div class="content">
         <img src="./img/viking-icon.svg"/>
-        <h3>Hire us</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <h3>Resume</h3>
+        <p>Skåne lag has a long experience of showcasing and mediating the Viking Age and our resume spans from 
+          educational school events to large scale movie productions and documentaries. As warriors we have fought our way across 
+          many battlefields and taken the lead in battles with hundreds of fearsome warriors infront of the cameras. We have displayed 
+          our fine weaponry skills at several shows and events and we master a broad veriaty fighting techniques. 
+          As craftsmen we have organize workshops and displays the art of crafting historical clothing, dying fabric, forging weapons and making jewelry. 
+          We showcase our work and skills all across the world at a 
+          verity of markets as well as arranging our own encampments. 
         </p>
       </div>
     </section>
@@ -112,7 +144,23 @@
         <div class="images">
             <div class="sliding-element active">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/fighting.jpg)"></div>
+              <div class="image" style="background-image:url(./img/aaron_fight.jpg);"></div>
+              <div class="content">
+                  <h3>Shows</h3>
+                  <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+              </div>
+            </div>
+            <div class="sliding-element ">
+              <div class="image-overlay"></div>
+              <div class="image" style="background-image:url(./img/deatb_of_aaron.jpg);"></div>
+              <div class="content">
+                  <h3>Shows</h3>
+                  <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+              </div>
+            </div>
+            <div class="sliding-element ">
+              <div class="image-overlay"></div>
+              <div class="image" style="background-image:url(./img/fighting.jpg);"></div>
               <div class="content">
                   <h3>Shows</h3>
                   <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
@@ -174,7 +222,7 @@
         </nav>
       </div>
     </footer>
-    <script src="./js/main.8949237a.js"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <script async src="./js/main.7286e866.js"></script>
+    <script async src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
