--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <title>Start</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/main.26d01df5.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.8e9a29d6.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicons/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
           <nav>
             <ul>
               <li><a href="./index.html">Start</a></li>
-              <li><a href="./reanactment.html">Reanactment</a></li>
+              <li><a href="./reenactment.html">Reenactment</a></li>
               <li><a href="./hire-us.html">Hire Us</a></li>
             </ul>
           </nav>
@@ -53,24 +53,18 @@
     <section class="top-section">
       <div class="content">
         <h1>Skåne Lag</h1>
-        <h2>Viking age renactors</h2>
+        <h2>Viking age reenactors</h2>
       </div>
       <img src="./img/there-is-more.svg"/>
     </section>
-    <section class="reanactment-section">
+    <section class="reenactment-section">
       <div class="content">
-        <h2>Reanactment</h2>
+        <h2>Reenactment</h2>
         <img src="./img/viking-icon.svg"/>
-        <h3>Warriors</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
-        </p>
+        <h3>Vikings</h3>
+        <p>For more then a thousand years the Vikings has fascinated us with their heroic deeds and mythical travels. Their heritage is constantly precent and they still influence our modern world all around the globe. Welcome to embark upon a journey leading you through history to the end of the Iron Age. We are an reenactment group striving to recreate the everyday lives of the remarkable men and women who lived more than a thousand years ago. Whether it is through fighting or craftsmanship we try to relive the lives of the people we know as the Vikings. </p>
         <div class="button-component">
-          <a href="/reanactment">Learn More</a>
+          <a href="./reenactment.html">Learn More</a>
         </div>
       </div>
     </section>
@@ -78,15 +72,9 @@
       <div class="content">
         <h2>Hire Us</h2>
         <h3>Movies <span class="no-wrap">· Shows</span></h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
-        </p>
+        <p>Skåne lag has a long experience of showcasing and mediating the Viking Age to a broad public, spanning from movies to educational school events. As fighters and craftspeople, we share knowledge and history in a living way, tangible for everyone. Our resume spans from fighting shows and events all across Europe to participating in large scale movie productions and documentaries.</p>
         <div class="button-component">
-          <a href="/hire-us">Learn More</a>
+          <a href="./hire-us.html">Learn More</a>
         </div>
       </div>
     </section>
@@ -95,7 +83,7 @@
         <h3>Join us</h3>
         <h2>Become a viking</h2>
         <div class="button-component">
-          <a href="/reanactment">Learn More</a>
+          <a href="./reenactment.html">Learn More</a>
         </div>
       </div>
     </section>
@@ -113,7 +101,7 @@
         </nav>
       </div>
     </footer>
-    <script src="./js/main.8949237a.js"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <script async src="./js/main.7286e866.js"></script>
+    <script async src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
