--- a/public/reenactment.html
+++ b/public/reenactment.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>Renactment</title>
+    <title>Reenactment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/main.26d01df5.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.8e9a29d6.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicons/apple-icon-57x57.png">
@@ -28,7 +28,7 @@
     <meta property="og:description" content="How much does culture influence creative thinking?" />
     <meta property="og:image" content="./img/someImage.jpg" />
   </head>
-  <body id="reanactment">
+  <body id="reenactment">
     <header>
       <input type="checkbox" name="open-close-menu" id="open-close-menu">
       <div class="content">
@@ -43,7 +43,7 @@
           <nav>
             <ul>
               <li><a href="./index.html">Start</a></li>
-              <li><a href="./reanactment.html">Reanactment</a></li>
+              <li><a href="./reenactment.html">Reenactment</a></li>
               <li><a href="./hire-us.html">Hire Us</a></li>
             </ul>
           </nav>
@@ -52,7 +52,7 @@
     </header>
     <section class="top-section">
       <div class="content">
-        <h1>Reanact<br class="break-point">ment</h1>
+        <h1>Reenact<br class="break-point">ment</h1>
         <h2>Live your history</h2>
       </div>
     </section>
@@ -60,12 +60,12 @@
       <div class="content">
         <img src="./img/viking-icon.svg"/>
         <h3>Vikings</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <p>Traders, craftspeople, worriers, plunderers, explores, adventurers and pioneers. These are just a few words that 
+          describe the fascinating group of people we today call Vikings. On rune stones we recall their lives, battles and 
+          travels. We can read about how they influenced the places they came to in written sources from all across the European 
+          continent and the Middle east. Even when the Vikings are described as ruthless plunderers ancient writers cannot help to 
+          also show their fasciation and respect. We are an reenactment group striving to recreate this fascinating chapter in history 
+          and relive the everyday lives of the men and women who walked these lands more than a thousand years ago. 
         </p>
       </div>
     </section>
@@ -75,7 +75,7 @@
         <div class="images">
             <div class="sliding-element active">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/horse.jpg)"></div>
+              <div class="image" style="background-image:url(./img/horse.jpg);"></div>
               <div class="content">
                   <h3>Vikings</h3>
                   <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
@@ -83,7 +83,37 @@
             </div>
             <div class="sliding-element ">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/profile.jpg)"></div>
+              <div class="image" style="background-image:url(./img/market.jpg);"></div>
+                  <div class="video-component" data-video-id="lXRfzcWN0jk">
+                    <div class="video-play-icon">
+                      <img src="./img/play.svg">
+                    </div>
+                    <div class="video-overlay">
+                      <div class="close-video"></div>
+                      <div class="video-container">
+                      <div class="videowrapper">
+                        <div class="video-slot"></div>
+                        
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+              <div class="content">
+                  <h3>Vikings</h3>
+                  <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+              </div>
+            </div>
+            <div class="sliding-element ">
+              <div class="image-overlay"></div>
+              <div class="image" style="background-image:url(./img/prepare_for_battlle.jpg);background-position: top left;"></div>
+              <div class="content">
+                  <h3>Vikings</h3>
+                  <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+              </div>
+            </div>
+            <div class="sliding-element ">
+              <div class="image-overlay"></div>
+              <div class="image" style="background-image:url(./img/wollin.jpg);background-position: top left;"></div>
                   <div class="video-component" data-video-id="oNEW4qPacGw">
                     <div class="video-play-icon">
                       <img src="./img/play.svg">
@@ -105,21 +135,7 @@
             </div>
             <div class="sliding-element ">
               <div class="image-overlay"></div>
-              <div class="image" style="background-image:url(./img/profile.jpg)"></div>
-                  <div class="video-component" data-video-id="lXRfzcWN0jk">
-                    <div class="video-play-icon">
-                      <img src="./img/play.svg">
-                    </div>
-                    <div class="video-overlay">
-                      <div class="close-video"></div>
-                      <div class="video-container">
-                      <div class="videowrapper">
-                        <div class="video-slot"></div>
-                        
-                      </div>
-                      </div>
-                    </div>
-                  </div>
+              <div class="image" style="background-image:url(./img/pray.jpg);background-position: top left;"></div>
               <div class="content">
                   <h3>Vikings</h3>
                   <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
@@ -137,12 +153,15 @@
       <div class="content">
         <img src="./img/viking-icon.svg"/>
         <h3>Historical</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <p>
+          The Viking Age is one of the most mythical and intriguing periods in history. It is also one of the most debated 
+          and stereotypical ones. As reeanactors we conduct a form of experimental archaeology were we, with the help from 
+          both archaeological finds and written sources, recreates the Viking Age society on a full scale. Historical authenticity 
+          is very important and all our equipment, tools, and clothing should be as correct as possible, always hand made and 
+          preferably with an actual find as precursor. To the most of us this is more then just a hobby, it’s a lifestyle and we
+          spend hunders of hours of training fighting techniques, studying and crafting our equipment. In opposition to role play or 
+          larps, you don’t have a role to play or scripts to follow, you are just yourself living as you would during the Viking age, 
+          without the stress of the modern world. 
         </p>
       </div>
     </section>
@@ -151,26 +170,30 @@
       <div class="content">
         <h2>Fighters</h2>
         <h3>Sword <span class="no-wrap">· Axe</span> <span class="no-wrap">· Spear</span></h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <p>
+          There was a strong warrior culture in the Viking society and weaponry skills and strength 
+          were highly respected abilities. Every week, the fighters in Skåne lag draw their swords, axes, spears 
+          and shields and fight together. It's a full body contact sport were we fight with real steel weapons, so it's no place for the week one. 
+          We train for years and we recreate fighting techniques and gear once used by the Vikings. 
+          Fighting requires technique, strength and speed as well as trust in your team and respect for the opponent. Together 
+          we prepare for the battlefields where we line up to fight our enemies. In that moment, we stand united
+          under our banner and are part of history.
         </p>
       </div>
     </section>
 
     <section class="craftmanship-section">
       <div class="content">
-        <h2>Craftsmen</h2>
+        <h2>Craftsmanship</h2>
         <h3>Metal <span class="no-wrap">· Jewlery</span> <span class="no-wrap">· Cloathing</span></h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <p>
+          For over a thousand years the artifacts of the Vikings have been kept below ground. Today, with the help of 
+          archaeology and history these objects are rediscovered and studied. Many of the members in Skåne lag have 
+          devoted countless hours to learn the crafts from the Viking era. Blacksmiths create the most beautiful jewelry 
+          from silver, gold and bronze and mighty weapons from iron. Wool and linen is spun and colored using only authentic 
+          methods. The colorful yarn is used in tablet weaving, needle binding and for creating clothes. 
+          Just as natural as it once was to our ancestors to craft what they needed, just as natural craftsmanship comes to the 
+          reenactment lifestyle and you’ll learn techniques required and used for thousands of years.
         </p>
       </div>
     </section>
@@ -223,7 +246,7 @@
         </nav>
       </div>
     </footer>
-    <script src="./js/main.8949237a.js"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <script async src="./js/main.7286e866.js"></script>
+    <script async src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
