--- a/public/vikings.html
+++ b/public/vikings.html
@@ -3,7 +3,7 @@
     <title>Vikings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/main.26d01df5.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.8e9a29d6.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicons/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
           <nav>
             <ul>
               <li><a href="./index.html">Start</a></li>
-              <li><a href="./reanactment.html">Reanactment</a></li>
+              <li><a href="./reenactment.html">Reenactment</a></li>
               <li><a href="./hire-us.html">Hire Us</a></li>
             </ul>
           </nav>
@@ -61,53 +61,80 @@
 
         <div class="column">
           <div>
-            <img src="./img/rasmus.jpg"/>
-            <h2>Rasmus Andersson</h2>
+            <img src="./img/linda.jpg"/>
+            <h2>Linda Spanier</h2>
           </div>
 
           <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
+            <img src="./img/dennis.jpg"/>
+            <h2>Dennis Johansson</h2>
           </div>
 
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
+        <div>
+            <img src="./img/emma.jpg"/>
+            <h2>Emma Berntsson Lundberg</h2>
+        </div>
+
+        <div>
+            <img src="./img/micke.jpg"/>
+            <h2>Micke Filur</h2>
+        </div>
+
+        <div>
+            <img src="./img/fredrik_j.jpg"/>
+            <h2>Fredrik Jönsson</h2>
           </div>
+
         </div>
 
         <div class="column">
+          <div>
+            <img src="./img/aaron.png"/>
+            <h2>Aaron Nilsson</h2>
+          </div>
+
+          <div>
+            <img src="./img/rasmus_portrait.jpg"/>
+            <h2>Rasmus Andersson</h2>
+          </div>
+
+          <div>
+            <img src="./img/hellen.jpg"/>
+            <h2>Helen Servin</h2>
+          </div>
+
+          <div>
+            <img src="./img/casper.jpg"/>
+            <h2>Casper Nilsson</h2>
+          </div>
+
+          <div>
+            <img src="./img/henrik.jpg"/>
+            <h2>Henrik Nordholm</h2>
+          </div>
+          
+        </div>
+
+        <div class="column">
+
+          <div>
+            <img src="./img/patrik.jpg"/>
+            <h2>Patrik Jansson</h2>
+          </div>
+
+          <div>
+            <img src="./img/nicolai.jpg"/>
+            <h2>Nicolai Lorich</h2>
+          </div>
+
           <div>
             <img src="./img/jacob.jpg"/>
-            <h2>Rasmus Andersson</h2>
+            <h2>Jacob Pettersson</h2>
           </div>
 
           <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/rasmus.jpg"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-        </div>
-
-        <div class="column">
-
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/rasmus.jpg"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
+            <img src="./img/pernilla.jpg"/>
+            <h2>Pernilla Svensson</h2>
           </div>
         </div>
         
@@ -128,7 +155,7 @@
         </nav>
       </div>
     </footer>
-    <script src="./js/main.8949237a.js"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <script async src="./js/main.7286e866.js"></script>
+    <script async src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
